--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
     <header class="header">
-        <h2>Welcome to The Little Taco Shop </h2>
+        <h2>Welcome to The Little Taco Shop</h2>
         <nav>
             <ul>
-                <li><a href=""></a>Home</li>
-                <li><a href=""></a>About LTS</li>
-                <li><a href=""></a>Our Menu</li>
-                <li><a href=""></a>Contact Us</li>
+                <li><a href="#about"></a>About LTS</li>
+                <li><a href="#menu"></a>Our Menu</li>
+                <li><a href="hours.html"></a>Store Hours</li>
+                <li><a href="contact.html"></a>Contact Us</li>
             </ul>
         </nav>
         <figure>
@@ -32,39 +32,45 @@
     <hr>
 
     <main>
-        <h2>About <abbr>LTS</abbr></h2>
-        <p><abbr>LTS</abbr> was founded in 2022. Our shop was built from a <strong>love of tacos</strong></p>
-        <h2>Our Menu</h2>
-        <table>
-            <caption>Our Tacos</caption>
-            <thread>
-                <tr>
-                    <th>Tacos</th>
-                    <th>Qty</th>
-                    <th>Price</th>
-                </tr>
-            </thread>
-            <tbody>
-                <tr>
-                    <td>Crunchy</td>
-                    <td>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
-                            <td>3</td>
-                        </tr>
-                    </td>
-                    <td>
-                        <tr>
-                            <td>$21.50</td>
-                            <td>$2.50</td>
-                            <td>$3.25</td>
-                        </tr>
-                    </td>
-                </tr>
-            </tbody>
-            <tfoot>Chips & Salsa $2</tfoot>
-        </table>
+        <section id="about">
+            <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
+            <p><abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong>love of tacos</strong>.
+            We hope our shop adds a unique and interesting place to our little town.</p>
+            <h3>Taco Trivia</h3>
+            <details>
+                <summary>When did tacos first appear in the United States?</summary>
+                <p>abcdefg</p>
+            </details>
+        </section>
+
+        <hr>
+        
+        <section id="menu">
+            <h2>Our Menu</h2>
+            <table boder="1">
+                <caption>Our Tacos</caption>
+                <thead>
+                    <tr>
+                        <th>Tacos</th>
+                        <th>Qty</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Crunchy</td>
+                        <td>2</td>
+                        <td>$2.00</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">Chips & Salsa $2</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+        
         <a href="#header">Back to Top</a>
     </main>
 
