--- a/contact.html
+++ b/contact.html
@@ -6,20 +6,20 @@
     <meta name="author" content="Hman">
     <meta name="description" content="Sale of tacos">
     <meta name="keywords" content="tacos, food, sale">
-    <link rel="stylesheet" href="D:\Code\Web\10_lesson_starter\css\style.css">
-    <link rel="shortcut icon" href="D:\Code\Web\10_lesson_starter\favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="10_lesson_starter/css/style.css">
+    <link rel="icon" href="10_lesson_starter/favicon.ico" type="image/x-icon">
     <title>Contact Us</title>
 </head>
 
 <body>
-    <header class="header">
+    <header id="header">
         <h2>Contact Us</h2>
         <nav>
             <ul>
-                <li><a href="index.html"></a>Home</li>
-                <li><a href="#about"></a>About LTS</li>
-                <li><a href="#menu"></a>Our Menu</li>
-                <li><a href="hours.html"></a>Store Hours</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/#about">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="/#menu">Our Menu</a></li>
+                <li><a href="hours.html">Store Hours</a></li>
             </ul>
         </nav>
         <figure>
@@ -32,32 +32,29 @@
     <main>
         <section>
             <h2>Contact Us</h2>
-            <form>
+            <form action="https://httpbin.org/get" method="get">
                 <fieldset>
                     <legend>Send Us A Message</legend>
                     <label>
                         Name:
                         <input type="text" name="name" required placeholder="your name">
-                    </label>
+                    </label><br>
+
                     <label>Email:
                         <input type="email" name="email" required placeholder="your email">
-                    </label>
-                    <lable>Your Message:
-                        <textarea name="message" required placeholder="Type your message here"></textarea>
-                    </lable>
-                    <lable>
-                        <input type="button" value="Send">
-                    </lable>
-                    <lable>
-                        <input type="reset" value="reset">
-                    </lable>
+                    </label><br>
+
+                    <label for="message">Your Message</label><br>
+                    <textarea id="message" name="message" cols="30" rows="10" rquired placeholder="your message"></textarea><br>
                 </fieldset>
+                <button type="submit">Send</button>
+                <button type="reset">Reset</button>
             </form>
         </section>
 
         <section>
             <h2>Our Location</h2>
-            <p>555 Taco Templation Lane, Suite T</p><br>
+            <p>555 Taco Templation Lane, Suite T</p>
             <p>Kansas City, MO 55555-5555</p>
             <p>Phone: 555-555-5555</p>
         </section>
