--- a/hours.html
+++ b/hours.html
@@ -6,20 +6,20 @@
     <meta name="author" content="Hman">
     <meta name="description" content="Sale of tacos">
     <meta name="keywords" content="tacos, food, sale">
-    <link rel="stylesheet" href="D:\Code\Web\10_lesson_starter\css\style.css">
-    <link rel="shortcut icon" href="D:\Code\Web\10_lesson_starter\favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="10_lesson_starter/css/style.css">
+    <link rel="icon" href="10_lesson_starter/favicon.ico" type="image/x-icon">
     <title>Little Taco Shop Hours</title>
 </head>
 
 <body>
-    <header class="header">
+    <header id="header">
         <h2>Little Taco Shop Hours</h2>
         <nav>
             <ul>
-                <li><a href="index.html"></a>Home</li>
-                <li><a href="#about"></a>About LTS</li>
-                <li><a href="#menu"></a>Our Menu</li>
-                <li><a href="contact.html"></a>Contact Us</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/#about">About <abnr title="Little Taco Shop">LTS</abnr></a></li>
+                <li><a href="/#menu">Our Menu</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <figure>
@@ -34,7 +34,12 @@
     <main>
         <section>
             <p>We are open 7 days a week!</p>
-            
+            <dl>
+                <dt>Sunday-Thursday</dt>
+                <dd>11am-9pm</dd>
+                <dt>Friday-Saturday</dt>
+                <dd>11am-9pm</dd>
+            </dl>
         </section>
 
         <hr>
