--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <h2>Contact Us</h2>
-            <form action="https://httpbin.org/get" method="get">
+            <form action="https://httpbin.org/post" method="post">
                 <fieldset>
                     <legend>Send Us A Message</legend>
                     <label>
